# Spinor_2D

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Code/kernel/: spinor_kernel_1.cl  spinor_kernel_2.cl  spinor_kernel_3.cl  spinor_kernel_4.cl  utilities.cl
Code/mesh/: spacetime.geo  spacetime.msh
Code/shader/: overlay_fragment.frag  overlay_geometry.geom  tile.geom  voxel_fragment.frag  voxel_geometry.geom
Code/src/: main.cpp
